SAP/ACSS-prereqs/VNet-with-AzFW/VNet-with-AzFW.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "metadata": {
        "description": "Deploys prerequisite networking resources for ACSS. Creates a new Virtual Network with the recommended subnets for SAP deployments. Also creates an Azure Firewall and associated rules to handle outbound internet connections.",
        "author": "Jason Tenpenny",
        "Enablement": "https://learn.microsoft.com/en-us/azure/sap/center-sap-solutions/prepare-network"
    },
    "parameters": {
        "homeIPAddress": {
            "defaultValue": "*",
            "type": "String",
            "metadata": {
                "description": "IP address used to allow inbound RDP/SSH connections into jumpbox-subnet"
            }
        },
        "namingConvention": {
            "defaultValue": "acss-lab",
            "type": "string",
            "metadata": {
                "description": "Enter a prefix to use for naming the resources."
            }
        },
        "virtualNetworkAddressSpace": {
            "defaultValue": "10.20.0.0/16",
            "type": "String",
            "metadata": {
                "description": "The address space for the virtual network. Must be a /22 or larger."
            }
        },
        "jumpbox-subnetAddressPrefix": {
            "defaultValue": "10.20.0.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for jumpbox-subnet"
            }
        },
        "app-subnetAddressPrefix": {
            "defaultValue": "10.20.1.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for app-subnet"
            }
        },
        "db-subnetAddressPrefix": {
            "defaultValue": "10.20.2.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for db-subnet"
            }
        },
        "azfwSubnetAddressPrefix": {
            "defaultValue": "10.20.3.0/26",
            "type": "String",
            "metadata": {
                "description": "Address prefix for AzureFirewallSubnet. Must be a /26 prefix."
            }
        },
        "azfwManagementSubnetAddressPrefix": {
            "defaultValue": "10.20.3.64/26",
            "type": "String",
            "metadata": {
                "description": "Address prefix for AzureFirewallManagementSubnet. Must be a /26 prefix."
            }
        }
    },
    "variables": {
        "appSubnetRT": "[concat(parameters('namingConvention'), '-app-subnet-rt')]",
        "dbSubnetRT": "[concat(parameters('namingConvention'), '-db-subnet-rt')]",
        "azfwPublicIP": "[concat(parameters('namingConvention'), '-azfw-pip')]",
        "azfwManagementPublicIP": "[concat(parameters('namingConvention'), '-azfw-mgmt-pip')]",
        "azfw": "[concat(parameters('namingConvention'), '-azfw')]",
        "vnet": "[concat(parameters('namingConvention'), '-vnet')]",
        "fwPolicy": "[concat(parameters('namingConvention'), '-fwpolicy')]",
        "appSubnetNSG": "[concat(parameters('namingConvention'), '-app-subnet-nsg')]",
        "dbSubnetNSG": "[concat(parameters('namingConvention'), '-db-subnet-nsg')]",
        "jumpboxSubnetNSG": "[concat(parameters('namingConvention'), '-jumpbox-subnet-nsg')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/firewallPolicies",
            "apiVersion": "2022-11-01",
            "name": "[variables('fwPolicy')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "sku": {
                    "tier": "Basic"
                },
                "threatIntelMode": "Alert"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('appSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('dbSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('jumpboxSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowConnectionsFromHomeIP",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', variables('jumpboxSubnetNSG'), 'AllowConnectionsFromHomeIP')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('homeIPAddress')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "3389",
                                "22"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('jumpboxSubnetNSG'), '/AllowConnectionsFromHomeIP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
            ],
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "[parameters('homeIPAddress')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "3389",
                    "22"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2022-11-01",
            "name": "[variables('azfwManagementPublicIP')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2022-11-01",
            "name": "[variables('azfwPublicIP')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2022-11-01",
            "name": "[variables('appSubnetRT')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "disableBgpRoutePropagation": false
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "2022-11-01",
            "name": "[variables('dbSubnetRT')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "disableBgpRoutePropagation": false
            }
        },
        {
            "type": "Microsoft.Network/firewallPolicies/ruleCollectionGroups",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('fwPolicy'), '/DefaultNetworkRuleCollectionGroup')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/firewallPolicies', variables('fwPolicy'))]"
            ],
            "properties": {
                "priority": 200,
                "ruleCollections": [
                    {
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                            "type": "Allow"
                        },
                        "rules": [
                            {
                                "ruleType": "NetworkRule",
                                "name": "AllowAllOutbound",
                                "ipProtocols": [
                                    "Any"
                                ],
                                "sourceAddresses": [
                                    "[parameters('virtualNetworkAddressSpace')]"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [
                                    "*"
                                ],
                                "destinationIpGroups": [],
                                "destinationFqdns": [],
                                "destinationPorts": [
                                    "*"
                                ]
                            },
                            {
                                "ruleType": "NetworkRule",
                                "name": "AllowICMPEchoReply",
                                "ipProtocols": [
                                    "ICMP"
                                ],
                                "sourceAddresses": [
                                    "*"
                                ],
                                "sourceIpGroups": [],
                                "destinationAddresses": [
                                    "*"
                                ],
                                "destinationIpGroups": [],
                                "destinationFqdns": [],
                                "destinationPorts": [
                                    "*"
                                ]
                            }
                        ],
                        "name": "RuleCollection1",
                        "priority": 100
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables/routes",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('appSubnetRT'), '/toAzFW')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', variables('appSubnetRT'))]",
                "[resourceId('Microsoft.Network/azureFirewalls', variables('azfw'))]"
            ],
            "properties": {
                "addressPrefix": "0.0.0.0/0",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "[reference(variables('azfw')).ipConfigurations[0].properties.privateIPAddress]",
                "hasBgpOverride": false
            }
        },
        {
            "type": "Microsoft.Network/routeTables/routes",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('dbSubnetRT'), '/toAzFW')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', variables('dbSubnetRT'))]",
                "[resourceId('Microsoft.Network/azureFirewalls', variables('azfw'))]"
            ],
            "properties": {
                "addressPrefix": "0.0.0.0/0",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "[reference(variables('azfw')).ipConfigurations[0].properties.privateIPAddress]",
                "hasBgpOverride": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/AzureFirewallManagementSubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('azfwManagementSubnetAddressPrefix')]",
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/AzureFirewallSubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('azfwSubnetAddressPrefix')]",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/jumpbox-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('jumpbox-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/app-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('appSubnetRT'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('app-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]"
                },
                "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', variables('appSubnetRT'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/db-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('dbSubnetRT'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('db-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]"
                },
                "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', variables('dbSubnetRT'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/azureFirewalls",
            "apiVersion": "2022-11-01",
            "name": "[variables('azfw')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('azfwManagementPublicIP'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallManagementSubnet')]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('azfwPublicIP'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallSubnet')]",
                "[resourceId('Microsoft.Network/firewallPolicies', variables('fwPolicy'))]"
            ],
            "properties": {
                "sku": {
                    "name": "AZFW_VNet",
                    "tier": "Basic"
                },
                "threatIntelMode": "Alert",
                "additionalProperties": {},
                "managementIpConfiguration": {
                    "name": "azfw-mgmt-pip",
                    "id": "[concat(resourceId('Microsoft.Network/azureFirewalls', variables('azfw')), '/azureFirewallIpConfigurations/azfw-mgmt-pip')]",
                    "properties": {
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('azfwManagementPublicIP'))]"
                        },
                        "subnet": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallManagementSubnet')]"
                        }
                    }
                },
                "ipConfigurations": [
                    {
                        "name": "azfw-pip",
                        "id": "[concat(resourceId('Microsoft.Network/azureFirewalls', variables('azfw')), '/azureFirewallIpConfigurations/azfw-pip')]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('azfwPublicIP'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallSubnet')]"
                            }
                        }
                    }
                ],
                "networkRuleCollections": [],
                "applicationRuleCollections": [],
                "natRuleCollections": [],
                "firewallPolicy": {
                    "id": "[resourceId('Microsoft.Network/firewallPolicies', variables('fwPolicy'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2022-11-01",
            "name": "[variables('vnet')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('appSubnetRT'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('dbSubnetRT'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('virtualNetworkAddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "AzureFirewallSubnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallSubnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('azfwSubnetAddressPrefix')]",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "jumpbox-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'jumpbox-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('jumpbox-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "app-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'app-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('app-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('appSubnetRT'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "db-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'db-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('db-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('dbSubnetRT'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "AzureFirewallManagementSubnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'AzureFirewallManagementSubnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('azfwManagementSubnetAddressPrefix')]",
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        }
    ]
}
